# etaai

./: Dockerfile  ReadMe.md  docker-compose.yaml  pyproject.toml
.github/workflows/: api_tests.yaml  docker_build.yaml  docker_builds.yaml  fastapi_test.yaml  tests.yaml
api/: main.py  pyproject.toml  test_main.py
api/api/: pyproject.toml
api/api/coral_interface/: __init__.py
api/api/coral_interface/docs/: conf.py  coral_interface.rst  index.rst
api/api/test/: test.py
api/api/whls/: pycoral-2.0.0-cp39-cp39-linux_x86_64.whl
api/coral_interface/: __init__.py
api/coral_interface/docs/: conf.py  modules.rst
api/test/: test.py
api/whls/: tflite_runtime-2.5.0.post1-cp39-cp39-linux_x86_64.whl
front_end/: Dockerfile
front_end/under_construction_page/: Dockerfile  README.md  pubspec.yaml
front_end/under_construction_page/android/app/: build.gradle
front_end/under_construction_page/android/app/src/main/: AndroidManifest.xml
front_end/under_construction_page/android/app/src/main/kotlin/com/example/geelen_io_front/: MainActivity.kt
front_end/under_construction_page/android/app/src/profile/: AndroidManifest.xml
front_end/under_construction_page/ios/Runner/: Info.plist
front_end/under_construction_page/ios/Runner.xcodeproj/: project.pbxproj
front_end/under_construction_page/lib/: main.dart
front_end/under_construction_page/linux/: CMakeLists.txt  my_application.cc
front_end/under_construction_page/macos/Runner.xcodeproj/: project.pbxproj
front_end/under_construction_page/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
front_end/under_construction_page/macos/Runner/Configs/: AppInfo.xcconfig
front_end/under_construction_page/test/: widget_test.dart
front_end/under_construction_page/web/: index.html  manifest.json
front_end/under_construction_page/windows/: CMakeLists.txt
front_end/under_construction_page/windows/runner/: Runner.rc  main.cpp
systemdeps/: install_and_run.sh  install_drivers.sh  install_drivers_root.sh
