[tool.poetry]
name = "eta-ai-api"
version = "0.1.0"
description = ""
authors = ["Pieter Geelen <psmgeelen@gmail.com>"]
readme = "README.md"
packages = [{include = "counting_cars"}]

[tool.poetry.dependencies]
python = "~3.9"
pycoral = { file = "whls/pycoral-2.0.0-cp39-cp39-linux_x86_64.whl" }
tflite-runtime = { file = "whls/tflite_runtime-2.5.0.post1-cp39-cp39-linux_x86_64.whl"}
numpy = "^1.24.3"
Pillow = "^9.5.0"
fastapi = "^0.96.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.9"
python-multipart = "^0.0.6"
fastapi-health = "^0.4.0"
httpx = "^0.24.1"
pytest = "^7.3.2"
docformatter = "^1.7.2"
sphinx = "^7.0.1"
sphinx-pydantic = "^0.1.1"
sphinx-autodoc-typehints = "^1.23.2"
pydata-sphinx-theme = "^0.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true